--- a/index.html
+++ b/index.html
@@ -617,6 +617,8 @@
         const studentYear = document.getElementById('year').value;
         
         const data = {
+            name: studentName,
+            year: studentYear,
             attendance: parseFloat(document.getElementById('attendance').value),
             study_hours: parseFloat(document.getElementById('study_hours').value),
             internal_marks: parseFloat(document.getElementById('internal_marks').value),
