--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
         console.log('Sending data to backend:', data);
 
         try {
-            const response = await fetch('http://127.0.0.1:5000/predict', {
+            const response = await fetch('/predict', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(data)
